netpol/np_db.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
 name: db-open-tcp-port-6379
spec:
 podSelector:
   matchLabels:
     tier: db
 policyTypes:
 - Ingress
 ingress:
 - from:
   - podSelector:
       matchLabels:
         tier: cache
         app: guestbook
         site: onprem
   - podSelector:
       matchLabels:
         tier: web
         app: guestbook
         site: azure
   ports:
   - protocol: TCP
     port: 6379
