netpol/np_frontend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
 name: frontend-open-tcp-port-3000
spec:
 podSelector:
   matchLabels:
     tier: web
 policyTypes:
 - Ingress
 ingress:
 - from:
   - ipBlock:
       cidr: 0.0.0.0/0
   ports:
   - protocol: TCP
     port: 3000
